--- a/templates/posts/topic.html
+++ b/templates/posts/topic.html
@@ -4,7 +4,7 @@
 <!-- notification -->
 <a href="{{topic.get_absolute_url}}#{{topic.last_seen}}">
 <span class="topic-status">
-{{topic.unseen}} new<br>
+<div>{{topic.unseen}} new</div>
 <small>{{topic.posts.count}} post{{topic.posts.count|pluralize}}</small>
 </span>
 </a>
