--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1">
+<link rel="icon" href="/static/icon.png">
 <title>{% block title %}forum.roderic.ca{% endblock %}</title>
 <style>
 html { background-color: #fafafa; font-family: sans-serif; }
