--- a/templates/posts/topic.html
+++ b/templates/posts/topic.html
@@ -1,5 +1,5 @@
 {% load humanize %}
-<div class="topic" id="{{topic.id}}">
+<div class="topic {{topic.tags_as_string}}" id="{{topic.id}}">
 
 <!-- notification -->
 <a href="{{topic.get_absolute_url}}#{{topic.last_seen}}">
@@ -16,9 +16,7 @@
 <small>
 by {{topic.author}}
 {{topic.posts.last.created_at|naturaltime}}
-{% if topic.tags.count %}
-({{topic.tags_as_string}})
-{% endif %}
+<i>{{topic.tags_as_string}}</i>
 </small>
 </a>
 
