--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@ article a { color: red; }
     overflow-wrap: break-word;
 }
 #quickpost { position: fixed; bottom: 0; }
+.sticky { font-weight: bold; }
 </style>
 </head>
 <body>
