--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,7 @@ article a { color: red; }
     overflow-wrap: break-word;
 }
 #quickpost { position: fixed; bottom: 0; }
+.online-indicator { color: #4b4; }
 </style>
 </head>
 <body>
