--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,14 @@ html { background-color: #fafafa; font-family: sans-serif; }
 body { padding: 0px 3px; margin: 0px auto; max-width: 40em; font-size: 16px; }
 textarea { display: block; width: 22em; height: 60vh; }
 header, footer { font-size: 80%; }
-pre { overflow-x: scroll; }
+pre {
+    overflow-x: scroll;
+}
+code {
+    font-size: 0.7em;
+    display: block;
+    background-color: #e9e9e9;
+}
 iframe { border: none; height: 100%; width: 100%; }
 article {
     font-family: serif;
@@ -28,6 +35,7 @@ article a { color: red; }
 }
 .topic a { text-decoration: none; }
 .sticky { font-weight: bold; }
+.secret { opacity: 0.5; }
 .topic-status {
     float: right;
     display: block;
@@ -48,9 +56,14 @@ article a { color: red; }
     -webkit-overflow-scrolling: touch;"
 }
 #sidebar { position: fixed; bottom: 0; left: 0; }
+#AdContainer { position: fixed; top: 0; left: 0; height: 100%; width: 100%; display: none; }
 </style>
 </head>
 <body>
+<div id="AdContainer">
+  I see you are not using an ad-blocker. This page will only render properly<br>
+  if you block ads! Consider installing µBlock&nbsp;Origin or AdBlock&nbps;Plus.
+</div>
 {% block nav %}
 <nav>
 {% block actions %}
