--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,15 @@
 <link rel="icon" href="/static/icon.png">
 <title>{% block title %}forum.roderic.ca{% endblock %}</title>
 <style>
-html { background-color: #fafafa; font-family: sans-serif; }
+.pale { background-color: #fafafa; }
+.left { left: 0; }
+.right { right: 0; }
+.bottom { bottom: 0; }
+.fixed { position: fixed; }
+.hidden { display: none; }
+.full-width { height: 100%; }
+.full-height { height: 100%; }
+html { font-family: sans-serif; }
 body { padding: 0px 3px; margin: 0px auto; max-width: 40em; font-size: 16px; }
 textarea { display: block; width: 22em; height: 60vh; }
 header, footer { font-size: 80%; }
@@ -18,7 +26,7 @@ code {
     display: block;
     background-color: #e9e9e9;
 }
-iframe { border: none; height: 100%; width: 100%; }
+iframe { border: none; }
 article {
     font-family: serif;
     background-color: white;
@@ -28,7 +36,6 @@ article {
 }
 article a { color: red; }
 .avatar { float: right; }
-.spoiler { color: white; } /* should be same as background */
 .topic {
     padding: 5px;
     margin: 5px;
@@ -46,28 +53,26 @@ article a { color: red; }
 }
 .online-indicator { color: #4b4; }
 .iframe-scroll-wrapper {
-    position: fixed;
-    height: 100%;
+    /*height: 100%;*/
     width: 100px;
-    top: 0;
-    right: 0;
     /* ios scrolling fix */
     overflow: scroll;
     -webkit-overflow-scrolling: touch;"
 }
-#sidebar { position: fixed; bottom: 0; left: 0; }
-#AdContainer { position: fixed; top: 0; left: 0; height: 100%; width: 100%; display: none; }
+.iframe-scroll-wrapper iframe { width: 100px; }
+#AdContainer { position: fixed; top: 0; left: 0; height: 100%; width: 100%; }
 </style>
 </head>
-<body>
+<body class="pale">
+{# comment #}
 <div id="AdContainer">
   I see you are not using an ad-blocker. This page will only render properly<br>
   if you block ads! Consider installing µBlock&nbsp;Origin or AdBlock&nbps;Plus.
 </div>
+{# endcomment #}
 {% block nav %}
 <nav>
-{% block actions %}
-{% endblock %}
+{% block actions %}{% endblock %}
 <a href="{% url 'topics-list' %}">topics</a>
 <a href="{% url 'tags-list' %}">tags</a>
 <a href="{% url 'profile' %}">profile</a>
@@ -79,5 +84,6 @@ article a { color: red; }
 {% block body %}
 This is the base template. Add a body block!
 {% endblock %}
+{% include 'posts/image_frame.html' %}
 </body>
 </html>
