--- a/templates/posts/topic_list.html
+++ b/templates/posts/topic_list.html
@@ -8,7 +8,7 @@
 <div id="topic-list">{% for topic in topic_list %}
 {% include 'posts/topic.html' %}
 {% endfor %}</div>
-<script>
+<!-- <script>
 {% include 'posts/topic_live.js' %}
-</script>
+</script> -->
 {% endblock %}
