--- a/templates/posts/topic.html
+++ b/templates/posts/topic.html
@@ -1,5 +1,5 @@
 {% load humanize %}
-<div class="topic" id="{{topic.id}}">
+<div class="topic{% if topic.unseen_count %} unseen{% endif %}" id="{{topic.id}}">
 
 {% spaceless %}
 <a href="{{topic.get_absolute_url}}#latest">
@@ -11,13 +11,15 @@
 {% endspaceless %}
 
 <a href="{{topic.get_absolute_url}}">
-{{topic.name}}
-<br>
+<div>{{topic.name}}</div>
 <small>
-by {{topic.author}}
-{% if topic.author.profile %}<span class="online-indicator">●</span>{% endif %}
-| last post {{topic.last_post|naturaltime}}
-<i>{{topic.tags_as_string}}</i>
+<div>
+last post {{topic.last_post.created_at|naturaltime}}
+by {{topic.last_post.author}}
+{% if topic.last_post.author.profile.is_online %}
+<span class="online-indicator">●</span>{% endif %}
+</div>
+<div><i>{{topic.tags_as_string}}&nbsp;</i></div>
 </small>
 </a>
 
