--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@ article a { color: red; }
     margin: 5px;
 }
 .topic a { text-decoration: none; }
-.unseen { font-weight: bold; }
+.sticky, .unseen { font-weight: bold; }
 .secret { opacity: 0.5; }
 .topic-status {
     float: right;
