--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -10,7 +10,9 @@
 <a href="{% url 'posts-squash' topic.id post.id %}">squash</a>
 {% endif %}
 {% if forloop %} #{{forloop.counter}}{% endif %}
-<img class="avatar" src="/uploads/{{post.author.profile.avatar}}" width="40px"/>
+<a href="/uploads/{{post.author.profile.avatar.raw}}">
+<img class="avatar" src="/uploads/{{post.author.profile.avatar.thumbnail}}" width="40px"/>
+</a>
 </small>
 <p class="breakable">{{post.content|linebreaksbr|bleach}}</p>
 </div>
