--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 <ul>{% for topic in topic_list %}
-{% include 'posts/topic.html' %}
+<li><a href="{{topic.get_absolute_url}}#latest">{{topic.name}}</a>
 {% endfor %}</ul>
 
 <div id="htmlPreview">
