--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 .hidden { display: none; }
 .full-width { height: 100%; }
 .full-height { height: 100%; }
+.borderless { border: none; }
 html { font-family: sans-serif; }
 body { padding: 0px 3px; margin: 0px auto; max-width: 40em; font-size: 16px; }
 textarea { display: block; width: 22em; height: 60vh; }
@@ -62,6 +63,8 @@ article a { color: red; }
 </style>
 </head>
 <body class="pale">
+{% for notification in notification_list %}
+{% endfor %}
 {% block nav %}
 <nav>
 {% block actions %}{% endblock %}
