--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
 .full-width { height: 100%; }
 .full-height { height: 100%; }
 .borderless { border: none; }
+.monospace { font-family: monospace; }
 html { font-family: sans-serif; }
 body { padding: 0px 3px; margin: 0px auto; max-width: 40em; font-size: 16px; }
 textarea { display: block; width: 22em; height: 60vh; }
