--- a/templates/posts/topic.html
+++ b/templates/posts/topic.html
@@ -14,14 +14,18 @@
 <div>{{topic.name}}</div>
 <small>
 <div>
-last post {{topic.last_post.created_at|naturaltime}}
-{% if topic.last_post.author == request.user %}
-  by you
-{% else %}
-  by {{topic.last_post.author}}
-  {% if topic.last_post.author.profile.is_online %}
-  <span class="online-indicator">●</span>
+{% if topic.last_post %}
+  last post {{topic.last_post.created_at|naturaltime}}
+  {% if topic.last_post.author == request.user %}
+    by you
+  {% else %}
+    by {{topic.last_post.author}}
+    {% if topic.last_post.author.profile.is_online %}
+    <span class="online-indicator">●</span>
+    {% endif %}
   {% endif %}
+{% else %}
+  by {{topic.author}}
 {% endif %}
 </div>
 <div><i>{{topic.tags_as_string}}&nbsp;</i></div>
