--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -1,29 +1,30 @@
 {% load posts_tags %}
 <div class="post" id="{{post.id}}" data-url="{% url 'posts-edit' post.id %}">
-<hr>
 
 <small>
-{{post.author}}
 
+<span>{{post.author}}</span>
 {% if post.author.profile.is_online %}
 <span class="online-indicator">●</span>
 {% endif %}
-
-{{post.created_at}}
+<span>{{post.created_at}}</span>
 <a href="{{post.get_absolute_url}}">detail</a>
-
-{% if topic and request.user.is_superuser %}
-<a href="{% url 'posts-squash' topic.id post.id %}">squash</a>
+{% if forloop %}
+<span>#{{forloop.counter}}</span>
 {% endif %}
-
-{% if forloop %}#{{forloop.counter}}{% endif %}
 
 {% if post.author.profile.avatar.raw %}
 <a href="/uploads/{{post.author.profile.avatar.raw}}">
 <img class="avatar" src="/uploads/{{post.author.profile.avatar.thumbnail}}" width="40px"/>
 </a>
 {% endif %}
+
 </small>
 
 <p class="breakable">{{post.content|linebreaksbr|bleach}}</p>
+
+{% if topic and post.author == request.user %}
+<span style="position: absolute; bottom: 0; right: 0;">
+{% endif %}
+
 </div>
