--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -24,7 +24,7 @@
 <p class="breakable">{{post.content|linebreaksbr|bleach}}</p>
 
 {% if topic and post.author == request.user %}
-<span style="position: absolute; bottom: 0; right: 0;">
+<a href="{% url 'posts-squash' post.id %}">^</a>
 {% endif %}
 
 </div>
