--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,11 @@ html { font-family: sans-serif; }
 body { padding: 0px 3px; margin: 0px auto; max-width: 40em; font-size: 16px; }
 textarea { display: block; width: 22em; height: 60vh; }
 header, footer { font-size: 80%; }
-pre {
-    overflow-x: scroll;
-}
 code {
-    font-size: 0.7em;
+    white-space: pre; /* pre-wrap; */
+    padding: 13px;
+    margin: 13px 0px;
+    overflow-x: scroll;
     display: block;
     background-color: #e9e9e9;
 }
